--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,13 @@
 // Specific CSS for your home-page
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.bg {
+  background-image: asset-data-url("bg_home.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
