--- a/app/views/beauticians/_form.html.erb
+++ b/app/views/beauticians/_form.html.erb
@@ -2,7 +2,7 @@
   <p><%= f.input :name %></p>
   <p><%= f.input :location %></p>
   <p><%= f.input :description %></p>
-  <p><%= f.input :photo, as: :file %></p>
-  <p><%= f.input :photo, as: :file %></p>
-  <p> <%= f.button :submit, class: "btn btn-outline-secondary" %></p
-    <% end %>
+  <p><%= f.input :Banner_photo, as: :file %></p>
+  <p><%= f.input :Portfolio_photos, as: :file, input_html: { multiple: true } %></p>
+  <p> <%= f.button :submit, class: "btn btn-primary" %></p
+<% end %>
