--- a/app/views/beauticians/index.html.erb
+++ b/app/views/beauticians/index.html.erb
@@ -1,10 +1,24 @@
 <div class="container">
+
+  <div class="col-md-8 offset-md-2">
+
+    <%= form_tag beauticians_path, method: :get, style: "display: flex;" do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control my-4",
+        placeholder: "Search Beauticians"
+      %>
+      <%= submit_tag "Search", class: "btn btn-primary my-4" %>
+    <% end %>
+        
+  </div>
+
   <div class="row">
     <div class="cards">
         <% @beauticians.each do |beautician| %>
           
           <div class="col-lg-4 col-md-6 col-sm-12 p-3">
-            <div class="card h-100">
+            <div class="card">
               <img class="card-img-top img-fluid" src="//via.placeholder.com/350x150" alt="img">
               <div class="card-body">
                 <h4 class="card-title"><%= beautician.name %></h4>
@@ -12,7 +26,7 @@
                 
               </div>
               <div class="card-footer text-center bg-white">
-                <a class="btn btn-outline-secondary" href="#">View all</a>
+                <a class="btn btn-outline-secondary" href="#">View Profile</a>
               </div>
             </div>
           </div>
