--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,3 +11,20 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.title-homepage {
+  padding-top: 50px;
+
+ }
+
+ .search-form {
+  padding-top: 80px;
+ }
+
+.btn-my-beauty {
+    color: #5C5656;
+    background-color: #D5A682;
+    border-color: #D5A682;
+}
+.input-my-beauty {
+  background-color: #F8F3F3;
+}
