Create steps banner

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -28,3 +28,16 @@ body, html {
 .input-my-beauty {
   background-color: #F8F3F3;
 }
+
+.container-steps {
+  background-color: #CFA387;
+  height: 380px;
+  display: flex;
+  justify-content: space-around;
+}
+.steps {
+  color: #F8F3F3;
+  font-size: 25px;
+  margin-top: 90px;
+}
+
