--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,6 +34,18 @@
 </div>
 
 <div class="container-steps">
+  <div class= "text-center steps">
+    <i class="fas fa-search fa-3x"></i>
+    <p class= "pt-4">Find a beautician who is right for you</p>
+  </div>
+  <div class="text-center steps">
+    <i class="fas fa-calendar-alt fa-3x"></i>
+    <p class= "pt-4">Book a date and time that suits you the best</p>
+  </div>
+  <div class="text-center steps">
+   <i class="fas fa-smile-beam fa-3x"></i></i>
+    <p class= "pt-4">Enjoy!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+  </div>
 
 </div>
 
