--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for [beautician, booking] do |f| %>
   <%= f.input :date, as: :date, html5: true %>
   <%= f.input :time, as: :time, html5: true %>
+  <%= f.input :address %>
   <%= f.button :submit, class: "btn btn-outline-primary" %>
 <% end %>
