Add seeds for treatments

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
 
   <div class="row">
     <div class="col-md-4 offset-md-6 search-form">
-      <form action="/action_page.php">
+      <form action="#">
         <div class="form-group">
           <input type="find-treatment" class="form-control input-my-beauty" placeholder="Find your treatment" id="find-treatment">
         </div>
