Change logo image

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
   </div>
 
 </div>
-<div class="text-center p-3">
+<div class="text-center p-3 white-bg">
   <p>TREATMENTS IN THE COMFORT OF YOUR OWN HOME</p>
 </div>
 
