--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,5 +8,14 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 100px;
+  padding: 0;
+  margin: 0;
+}
+.navbar-brand {
+  padding: 0;
+}
+
+.navbar {
+  padding: 0px 16px;
 }
