--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [beautician, booking] do |f| %>
+<%= simple_form_for [treatment, booking] do |f| %>
   <%= f.input :date, as: :date, html5: true %>
   <%= f.input :time, as: :time, html5: true %>
   <%= f.input :location %>
