--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,7 +16,7 @@ body, html {
 
  }
 
- .search-form {
+.search-form {
   padding-top: 80px;
  }
 
@@ -34,6 +34,7 @@ body, html {
   height: 380px;
   display: flex;
   justify-content: space-around;
+  margin-bottom: 20px;
 }
 .steps {
   color: #F8F3F3;
@@ -42,4 +43,16 @@ body, html {
 }
 .white-bg {
   background-color: white;
+}
+
+.card-img {
+height: 300px;
+background-size: cover;
+
+}
+.card-description {
+  background-color: #F8F3F3;
+  height: 300px;
+  padding-top: 138px;
+  font-size: 24px;
 }
