--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,6 +49,25 @@
 
 </div>
 
+<div class="row treatments-card">
+  <div class="col-md-6 card-img" style="background-image: url('/assets/nails.jpg')"></div>
+  <div class="col-md-6 card-description my-auto">
+    <p>get your nails done</p>
+  </div>
+</div>
 
+<div class="row treatments-card">
+  <div class="col-md-6 card-description my-auto">
+    <p>get your nails done</p>
+  </div>
+  <div class="col-md-6 card-img" style="background-image: url('/assets/nails.jpg')"></div>
+</div>
+
+<div class="row treatments-card">
+  <div class="col-md-6 card-img" style="background-image: url('/assets/nails.jpg')"></div>
+  <div class="col-md-6 card-description my-auto">
+    <p>get your nails done</p>
+  </div>
+</div>
 
 </body>
