--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 
   <%= form_tag orders_path do %>
-    <%= hidden_field_tag 'teddy_id', @teddy.id %>
+    <%= hidden_field_tag 'booking_id', @booking.id %>
     <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
   <% end %>
 </div>
