--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,10 +15,15 @@
     <div class="col-md-4 offset-md-6 search-form">
       <form action="#">
         <div class="form-group">
-          <input type="find-treatment" class="form-control input-my-beauty" placeholder="Find your treatment" id="find-treatment">
+          <select class="form-control input-my-beauty" placeholder="Find your treatment" id="find-treatment">
+            <option>Choose Your Treatment</option>
+            <% @treatments.each do |treatment| %>
+            <option value="<%= treatment.id %>"><%= treatment.name %></option>
+            <%end%>
+          </select>
         </div>
         <div class="form-group">
-          <input type="your-password" class="form-control input-my-beauty" placeholder="Your Postcode" id="your-postcode">
+          <input type="text" class="form-control input-my-beauty" placeholder="Your Postcode" id="your-postcode">
         </div>
         <div class="form-group">
           <input type="booking-date" class="form-control input-my-beauty" placeholder="Booking Date" id="booking-date">
