--- a/app/views/beauticians/show.html.erb
+++ b/app/views/beauticians/show.html.erb
@@ -1,27 +1,40 @@
 <div class="container">
-  <div class="banner">
-    <%= cl_image_tag @beautician.banner_photo.key, height: 300, width: 800, crop: :fill %>
+  <div class="text-center">
+    <%= cl_image_tag @beautician.banner_photo.key, height: 300, width: 900, crop: :fill %>
   </div>
 
-  <div>
+  <div class="text-center">
     <h1><%= @beautician.name %></h1>
-    <h1><%= @beautician.location %></h1>
-    <p><h4><%= @beautician.description %></h4><p>
+    <h3><%= @beautician.location %></h3>
+    <p><%= @beautician.description %><p>
   </div>
-
-      <div class="treatments">
+<br>
+      <div class="text-center">
       <h4>Treatments</h4>
         <% @beautician.treatments.each do |treatment| %>
           <ul>
-            <li> <b><%= treatment.name %></b>: <%= treatment.description %> - £<%= treatment.cost %> - <%= link_to "Book Now",  new_treatment_booking_path(treatment), class: "btn btn-my-beauty"%></li>
+            <li class="treatment_card">
+              <div class="d-flex justify-content-between"> 
+                <div class="treatment_name">
+                  <b><%= treatment.name %></b>
+                </div> 
+                <div class="price">£<%= treatment.cost %> </div> 
+                <div class="booking_button"> <%= link_to "Book Now",  new_treatment_booking_path(treatment), class: "btn btn-my-beauty"%> </div>
+              </div> 
+              <br> 
+              <%= treatment.description %></li>
           </ul>
         <% end %>
       </div>
-  
-  <div>
-    <h2>View our work!</h2>
+<br>
+<h2 class="text-center">See Our Work</h2>
+  <div class="portfolio_card">
       <% @beautician.portfolio_photos.each do |photo| %>
-      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+      <div class="image_card"><%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %></div>
       <% end %>
-    </div>
+  </div>
+<br>
+  <div>
+    <h2 class="text-center">Reviews</h2>
+  </div>
 </div>
