--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,15 +1,16 @@
-<div class="container">
+<div class="container text-center">
   <div class="row py-4">
     
     <div class="col">
       <h1>Order #<%= @order.id %> <small><span class="badge badge-primary"><%= @order.state %></span></small></h1>
       <ul class="list-unstyled">
         <li><strong>ISSUED ON</strong> <%= @order.created_at.to_date %></li>
-        <li><strong>BOOKING</strong> <%= @order.booking.treatment %></li>
+        <li><strong>BOOKING</strong> <%= @order.booking.treatment.name %></li>
         <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @order.amount %></li>
         </li>
       </ul>
       
     </div>
+
   </div>
 </div>
