modified order show page

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,8 +9,8 @@
         <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @order.amount %></li>
         </li>
       </ul>
-      
+      <h1>Enjoy your Treatment!</h1>
     </div>
-
+    
   </div>
 </div>
