--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,1 +1,3 @@
- <%= render "form", booking: @booking, treatment: @treatment %>
+<div>
+  <%= render "form", booking: @booking, treatment: @treatment %>
+</div>
