--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,7 +56,7 @@
 </div>
 
 <div class="row treatments-card">
-  <div class="col-md-6 card-img" style="background-image: url('/assets/nails.jpg')"></div>
+  <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'nails.jpg' %>)"></div>
   <div class="col-md-6 card-description my-auto">
     <p>get your nails done</p>
   </div>
@@ -66,11 +66,11 @@
   <div class="col-md-6 card-description my-auto">
     <p>get your nails done</p>
   </div>
-  <div class="col-md-6 card-img" style="background-image: url('/assets/nails.jpg')"></div>
+  <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'hair.jpg' %>)"></div>
 </div>
 
 <div class="row treatments-card">
-  <div class="col-md-6 card-img" style="background-image: url('/assets/nails.jpg')"></div>
+  <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'face.jpg' %>)"></div>
   <div class="col-md-6 card-description my-auto">
     <p>get your nails done</p>
   </div>
