--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon" style="background-color: #E4DADB;">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <img src="/assets/logo.png" class="logo-img">
+    <%= image_tag "logo.png", class: "logo-img"%>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
