Completed Fave Icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,9 @@
   <head>
     <title><%= meta_title %></title>
 <meta name="description" content="<%= meta_description %>">
+<%= favicon_link_tag %>
+<%# <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon"> %>
 
 <!-- Facebook Open Graph data -->
 <meta property="og:title" content="<%= meta_title %>" />
