--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -11,7 +11,7 @@
       </ul>
       <h1>Enjoy your Treatment!</h1>
     </div>
-    <img src="https://image.freepik.com/free-photo/beautiful-woman-with-red-lips-manicure_106029-4.jpg" alt="woman_red" width="500" height="600">
+    <img src="https://image.freepik.com/free-photo/beautiful-woman-with-red-lips-manicure_106029-4.jpg" alt="woman_red" height="600">
 
   </div>
 </div>
