Change text description on landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,7 +42,7 @@
 <div class="container-steps">
   <div class= "text-center steps">
     <i class="fas fa-search fa-3x"></i>
-    <p class= "pt-4">Find a beautician who is right for you</p>
+    <p class= "pt-4">Find a beautician who is right for you </p>
   </div>
   <div class="text-center steps">
     <i class="fas fa-calendar-alt fa-3x"></i>
@@ -50,7 +50,7 @@
   </div>
   <div class="text-center steps">
    <i class="fas fa-smile-beam fa-3x"></i></i>
-    <p class= "pt-4">Enjoy!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+    <p class= "pt-4">Enjoy your treatment!</p>
   </div>
 
 </div>
@@ -58,13 +58,13 @@
 <div class="row treatments-card">
   <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'nails.jpg' %>)"></div>
   <div class="col-md-6 card-description my-auto">
-    <p>get your nails done</p>
+    <p>Whether you're after a gel manicure that will last the distance, some chic nail designs, or colourful and quirky designs – chose from our large list of professionals for all your nail needs.</p>
   </div>
 </div>
 
 <div class="row treatments-card">
   <div class="col-md-6 card-description my-auto">
-    <p>get your nails done</p>
+    <p style="margin-left: 12px">Take care of your hair. Find the treatment that your hair needs the most.</p>
   </div>
   <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'hair.jpg' %>)"></div>
 </div>
@@ -72,7 +72,7 @@
 <div class="row treatments-card">
   <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'face.jpg' %>)"></div>
   <div class="col-md-6 card-description my-auto">
-    <p>get your nails done</p>
+    <p>A facial is essentially a multi-step skin treatment that is one of the best ways to take care of your skin.</p>
   </div>
 </div>
 
