--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,3 +1,11 @@
-<div>
-  <%= render "form", booking: @booking, treatment: @treatment %>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 offset-sm-4">
+      <div class="form">
+        <%= render "form", booking: @booking, treatment: @treatment %>
+      </div>
+    </div>
+  </div>
 </div>
