created reviews and sorted out the routes

--- a/app/views/beauticians/_form.html.erb
+++ b/app/views/beauticians/_form.html.erb
@@ -5,5 +5,5 @@
   <p><%= f.association :treatments, collection: Treatment.all, as: :check_boxes, wrapper: :horizontal_boolean, label: false %></p>
   <p><%= f.input :banner_photo, as: :file %></p>
   <p><%= f.input :portfolio_photos, as: :file, input_html: { multiple: true } %></p>
-  <p> <%= f.button :submit, class: "btn btn-primary" %></p
+  <p> <%= f.button :submit, class: "btn btn-my-beauty" %></p
 <% end %>
