--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -2,5 +2,5 @@
   <%= f.input :date, as: :date, html5: true %>
   <%= f.input :time, as: :time, html5: true %>
   <%= f.input :location %>
-  <%= f.button :submit, class: "btn btn-outline-primary" %>
+  <%= f.button :submit, class: "btn btn-my-beauty" %>
 <% end %>
