--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -8,14 +8,15 @@
       <p>date = <%= @booking.date.strftime("%F") %></p>
       <p>time = <%= @booking.time.strftime("%H:%M") %></p>
       <p>location = <%= @booking.location %></p>
+      <p><%= link_to 'Leave a review', new_booking_review_path(@booking) %></p>
 
       <%= form_tag orders_path do %>
         <%= hidden_field_tag 'booking_id', @booking.id %>
-        <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
+        <%= submit_tag 'Purchase', class: 'btn btn-my-beauty' %>
       <% end %>
     </div>
+
     <div>
       <img src="https://res.cloudinary.com/dwldoynuu/image/upload/v1590751977/Health_Beauty_Salon_qmqeqy.jpg" alt="flowers" width="800" style="border: 2px solid white; margin-top: 5px;">
     </div>
-  </div>
 </div>
