--- a/app/views/beauticians/show.html.erb
+++ b/app/views/beauticians/show.html.erb
@@ -34,6 +34,13 @@
       <% end %>
   </div>
 <br>
+
+<div id="map"
+     style="width: 100%; height: 500px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+
+<br>
   <div>
     <h2 class="text-center">Reviews</h2>
   </div>
