--- a/app/views/beauticians/_card.html.erb
+++ b/app/views/beauticians/_card.html.erb
@@ -1,7 +1,7 @@
 <div class="cards">
 
   <% @beauticians.each do |beautician| %>
-    
+
     <div class="col-lg-4 col-md-6 col-sm-12 p-3">
       <div class="card">
 
@@ -20,7 +20,7 @@
 
         </div>
         <div class="card-footer text-center bg-white">
-          <%= link_to "View Profile", beautician_path(beautician), class: "btn btn-outline-secondary" %>
+          <%= link_to "View Profile", beautician_path(beautician), class: "btn btn-my-beauty" %>
         </div>
       </div>
     </div>
