--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [ @booking, @review ] do |f| %>
   <%= f.input :title %>
   <%= f.input :content %>
-  <%= f.input :rating, collection: (1..5) %>
+  <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
   <%= f.submit "Submit review", class: "btn btn-my-beauty" %>
 <% end %>
