--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,8 @@
 @import "font-awesome";
 @import 'mapbox-gl/dist/mapbox-gl';
 
+@import "jquery-bar-rating/dist/themes/css-stars";
+
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
