Add image on order confirmation page, change backgroung colour

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
-  <body style="background-color: #efefef;">
+  <body style="background-color: #FEFFFF;">
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
 
