attempt at fixing show page ratings

--- a/app/views/beauticians/show.html.erb
+++ b/app/views/beauticians/show.html.erb
@@ -51,7 +51,7 @@
           <div class="treatment_name">
               <b><%= review.title %></b>
           </div>
-          <div class="price"><%= review.rating %> stars </div>
+          <div class="rating"><%= review.rating %> stars </div>
           </div>
         <br>
         <%= review.content %></li>
