fixed treatments so new beautician form creates new treatment attached to beautician

--- a/app/views/beauticians/show.html.erb
+++ b/app/views/beauticians/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 <br>
   <div class="cards">
-    <% @beautician.treatments.each do |treatment| %>
+    <% @beautician.beautician_treatments.each do |treatment| %>
     <div class="col-lg-4 col-md-6 col-sm-12 p-3">
       <div class="card treatment-service-card">
         <div class="card-body">
