--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,7 +31,7 @@ body, html {
 
 .container-steps {
   background-color: #CFA387;
-  height: 380px;
+  height: 340px;
   display: flex;
   justify-content: space-around;
   margin-bottom: 20px;
@@ -59,4 +59,15 @@ background-size: cover;
 .flowers-img {
 
   width: 500px;
+}
+.review-carousel {
+  height: 250px;
+  margin: auto;
+}
+.review-content {
+    width: 300px;
+    margin: auto;
+    padding-top: 50px;
+    font-size: 20px;
+    font-style: italic;
 }
