Created the beautician_treatments controller as well as added the edit and update function

--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -7,5 +7,12 @@
         <li><%= link_to 'Leave a review', new_booking_review_path(booking), class: 'btn btn-my-beauty' %></li>
       </ul>
     </div>
-  <% end %>
+    <% end %>
+
+  <div>
+  <li><%= link_to 'View Treatments', beautician_treatments_path, class: 'btn btn-my-beauty' %></li>
+  </div>
+
+  
+
 </div>
