added the new/create methods to treatments

--- a/app/views/beautician_treatments/index.html.erb
+++ b/app/views/beautician_treatments/index.html.erb
@@ -13,4 +13,8 @@
       </div>
     </div>
     <% end %>
+
+    <div>
+      <%= link_to "Add New Treatment",  new_beautician_beautician_treatment_path(current_user.beauticians.first), class: "btn btn-my-beauty"%>
+    </div>
   </div>
