--- a/app/views/beautician_treatments/new.html.erb
+++ b/app/views/beautician_treatments/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 offset-sm-4">
       <div class="form">
-        <h1>Edit your Treatment!</h1>
+        <h1>Create your Treatment!</h1>
        <%= render "form", beautician_treatment: @beautician_treatment %>
       </div>
     </div>
