--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
           </select>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control input-my-beauty" placeholder="Your Postcode" id="your-postcode" name="multiquery[postcode]">
+          <input type="text" class="form-control input-my-beauty" placeholder="Enter Your postcode/address" id="your-postcode" name="multiquery[postcode]">
         </div>
         <%# <div class="form-group">
           <input type="text" class="form-control input-my-beauty" placeholder="Booking Date" id="booking-date" name="multiquery[date]">
