fixed issues with making booking for new join table

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,10 +21,17 @@ body, html {
  }
 
 .btn-my-beauty {
-    color: #5C5656;
-    background-color: #D5A682;
-    border-color: #D5A682;
+  color: #5C5656;
+  background-color: #D5A682;
+  border-color: #D5A682;
 }
+
+.badge-my-beauty {
+  color: #5C5656;
+  background-color: #D5A682;
+  border-color: #D5A682;
+}
+
 .input-my-beauty {
   background-color: #F8F3F3;
 }
