--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -4,7 +4,7 @@
       <h1>Booking Details</h1>
       <h2>Please confirm details and pay</h2>
 
-      <p><%= @booking.treatment.name %> - £<%= @booking.treatment.cost %>
+      <p><%= @booking.beautician_treatment.name %> - £<%= @booking.beautician_treatment.cost %>
       <p>date = <%= @booking.date.strftime("%F") %></p>
       <p>time = <%= @booking.time.strftime("%H:%M") %></p>
       <p>location = <%= @booking.location %></p>
