--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,10 +2,10 @@
   <div class="row py-4">
 
     <div class="col-md-6 mt-4 pt-4">
-      <h1>Order #<%= @order.id %> <small><span class="badge badge-primary"><%= @order.state %></span></small></h1>
+      <h1>Order #<%= @order.id %> <small><span class="badge badge-my-beauty"><%= @order.state %></span></small></h1>
       <ul class="list-unstyled">
         <li><strong>ISSUED ON</strong> <%= @order.created_at.to_date %></li>
-        <li><strong>BOOKING</strong> <%= @order.booking.treatment.name %></li>
+        <li><strong>BOOKING</strong> <%= @order.booking.beautician_treatment.name %></li>
         <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @order.amount %></li>
         </li>
       </ul>
