--- a/app/views/beauticians/show.html.erb
+++ b/app/views/beauticians/show.html.erb
@@ -36,6 +36,7 @@
   </div>
 <br>
 
+<h2 class="text-center">My Location</h2>
 <div id="map"
      style="width: 100%; height: 500px;"
      data-markers="<%= @markers.to_json %>"
