--- a/app/views/beautician_treatments/index.html.erb
+++ b/app/views/beautician_treatments/index.html.erb
@@ -1,4 +1,11 @@
- <div class="cards">
+<div class="container">
+  <div>
+  <h3 class="text-center">Your Beautician Treatments</h3>
+  </div>
+  <div class="text-center">
+    <%= link_to "Add New Treatment",  new_beautician_beautician_treatment_path(current_user.beauticians.first), class: "btn btn-my-beauty"%>
+  </div>
+  <div class="cards">
     <% @beautician_treatments.each do |treatment| %>
     <div class="col-lg-4 col-md-6 col-sm-12 p-3">
       <div class="card treatment-service-card">
@@ -12,9 +19,6 @@
         </div>
       </div>
     </div>
-    <% end %>
-
-    <div>
-      <%= link_to "Add New Treatment",  new_beautician_beautician_treatment_path(current_user.beauticians.first), class: "btn btn-my-beauty"%>
-    </div>
+    <% end %> 
   </div>
+</div>
