--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -1,25 +1,23 @@
 <div class="bg-img">
-<div class="container" style="padding-top: 150px">
-  <h2 style="padding-left: 430px">My Bookings</h2>
-    <% @bookings.each do |booking| %>
-    <div class="row">
-        <div class="col-md-6 offset-md-2 ">
-          <div style="padding: 24px" class="card-account">
-            <%= link_to "View Booking", booking_path(booking), class: 'btn btn-my-beauty' %>
-            <%= link_to 'Leave a review', new_booking_review_path(booking), class: 'btn btn-my-beauty' %>
-        </div>
-        </div>
-
-
-    </div>
-    <% end %>
-
-  <div>
+  <div class="container" style="padding-top: 150px">
+    <h2 style="padding-left: 430px">My Bookings</h2>
+      <% @bookings.each do |booking| %>
+        <div class="row">
+          <div class="col-md-6 offset-md-2 ">
+            <div style="padding: 24px" class="card-account">
+              <%= link_to "View Booking", booking_path(booking), class: 'btn btn-my-beauty' %>
+              <%= link_to "Edit Booking", edit_booking_path(booking), class: 'btn btn-my-beauty' %>
+              <%= link_to 'Leave a review', new_booking_review_path(booking), class: 'btn btn-my-beauty' %>
+            </div>
+          </div>
+      </div>
+      <% end %>
+  <%# <div>
     <%if @user.beauticians.present?%>
-    <div style="padding: 20px 200px">
+    <%# <div style="padding: 20px 200px">
       <li><%= link_to 'View Treatments', beautician_treatments_path, class: 'btn btn-my-beauty' %></li>
-    </div>
-  <% end %>
+    <%# </div>
+  <% end %> 
+  <%# </div> %>
   </div>
-</div>
 </div>
