--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,14 @@
-<%= simple_form_for [ @booking, @review ] do |f| %>
-  <%= f.input :title %>
-  <%= f.input :content %>
-  <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
-  <%= f.submit "Submit review", class: "btn btn-my-beauty" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 offset-sm-4">
+      <div class="form">
+        <%= simple_form_for [ @booking, @review ] do |f| %>
+        <%= f.input :title %>
+        <%= f.input :content %>
+        <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
+        <%= f.submit "Submit review", class: "btn btn-my-beauty" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
