change checkout summary position

--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row py-4">
+  <div class="row py-4 text-center checkout">
     
     <div class="col">
       <h1>Checkout summary</h1>
