--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -5,6 +5,9 @@
         <div class="row">
           <div class="col-md-6 offset-md-2 ">
             <div style="padding: 24px" class="card-account">
+              <p><b>Beautician: </b><%= booking.beautician_treatment.beautician.name %></p> 
+              <p><b>Date: </b><%= booking.date.strftime("%d / %m / %Y") %></p>
+              <p><b>Treatment: </b><%= booking.beautician_treatment.name %></p>
               <%= link_to "View Booking", booking_path(booking), class: 'btn btn-my-beauty' %>
               <%= link_to "Edit Booking", edit_booking_path(booking), class: 'btn btn-my-beauty' %>
               <%= link_to 'Leave a review', new_booking_review_path(booking), class: 'btn btn-my-beauty' %>
