--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,8 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
 
+
     <%= yield %>
+    <%= render 'shared/footer' %>
   </body>
 </html>
