fixed edit booking and date layout on booking show

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -5,7 +5,7 @@
       <h2>Please confirm details and pay</h2>
 
       <p><%= @booking.beautician_treatment.name %> - £<%= @booking.beautician_treatment.cost %>
-      <p>Date = <%= @booking.date.strftime("%F") %></p>
+      <p>Date = <%= @booking.date.strftime("%d / %m / %Y") %></p>
       <p>Time = <%= @booking.time.strftime("%H:%M") %></p>
       <p>Location = <%= @booking.location %></p>
 
