Change carousel backgroung color and font size on cards description

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,13 +61,13 @@
 <div class="row treatments-card">
   <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'nails.jpg' %>)"></div>
   <div class="col-md-6 card-description my-auto">
-    <p>Whether you're after a gel manicure that will last the distance, some chic nail designs, or colourful and quirky designs – chose from our large list of professionals for all your nail needs.</p>
+    <p>Whether you're after a gel manicure that will last the distance or colourful and quirky designs – chose from our large list of professionals for all your nail needs.</p>
   </div>
 </div>
 
 <div class="row treatments-card">
   <div class="col-md-6 card-description my-auto">
-    <p style="margin-left: 12px">Take care of your hair. Find the treatment that your hair needs the most.</p>
+    <p style="margin-left: 12px">Take care of your hair. You can make follicles happy with a hair growth serum or thinning hair treatment filled with nourishing oils that hydrate and protect.</p>
   </div>
   <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'hair.jpg' %>)"></div>
 </div>
@@ -75,12 +75,12 @@
 <div class="row treatments-card">
   <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'face.jpg' %>)"></div>
   <div class="col-md-6 card-description my-auto">
-    <p>A facial is essentially a multi-step skin treatment that is one of the best ways to take care of your skin.</p>
+    <p>Whether you want instant radiance or a complete skin overhaul, here are the best facial treatments that employ both pioneering technology and a healing touch.</p>
   </div>
 </div>
 <div style="height: 20px"></div>
 
-<div class="container-fluid review-carousel" style="background-color: #e0dede">
+<div class="container-fluid review-carousel" style="background-color: #F8F3F3">
   <div class="scroller">
     <div>
       <div class="text-center mt-4"><h4>What people say?</h4></div>
