--- a/app/views/beauticians/show.html.erb
+++ b/app/views/beauticians/show.html.erb
@@ -56,28 +56,28 @@
           <div class="rating">
             <% if review.rating == 1 %>
               <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
+              <span class="far fa-star"></span>
+              <span class="far fa-star"></span>
+              <span class="far fa-star"></span>
+              <span class="far fa-star"></span>
             <% elsif review.rating == 2 %>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
+              <span class="far fa-star"></span>
+              <span class="far fa-star"></span>
+              <span class="far fa-star"></span>
             <% elsif review.rating == 3 %>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
+              <span class="far fa-star"></span>
+              <span class="far fa-star"></span>
             <% elsif review.rating == 4 %>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
+              <span class="far fa-star"></span>
             <% else %>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
