added button effect

--- a/app/views/beautician_treatments/_form.html.erb
+++ b/app/views/beautician_treatments/_form.html.erb
@@ -2,5 +2,5 @@
   <p><%= f.input :name %></p>
   <p><%= f.input :description %></p>
   <p><%= f.input :cost %></p>
-  <p> <%= f.button :submit, class: "btn btn-my-beauty" %></p
+  <p> <%= f.button :submit, class: "btn btn-my-beauty hvr-float-shadow" %></p
 <% end %>
