--- a/app/views/beauticians/_form.html.erb
+++ b/app/views/beauticians/_form.html.erb
@@ -7,5 +7,5 @@
   <% end %>
   <p><%= f.input :banner_photo, as: :file %></p>
   <p><%= f.input :portfolio_photos, as: :file, input_html: { multiple: true } %></p>
-  <p> <%= f.button :submit, class: "btn btn-my-beauty" %></p
+  <p> <%= f.button :submit, class: "btn btn-my-beauty hvr-float-shadow" %></p
 <% end %>
