--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -11,7 +11,7 @@
 
       <%= form_tag orders_path do %>
         <%= hidden_field_tag 'booking_id', @booking.id %>
-        <%= submit_tag 'Purchase', class: 'btn btn-my-beauty' %>
+        <%= submit_tag 'Purchase', class: 'btn btn-my-beauty hvr-float-shadow' %>
       <% end %>
     </div>
 
