--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,8 +31,8 @@
         <%# <div class="form-group">
           <input type="text" class="form-control input-my-beauty" placeholder="Booking Date" id="booking-date" name="multiquery[date]">
         </div> %>
-        <button type="submit" class="btn btn-my-beauty">Search</button>
-        <%= link_to "View all Beauticians", beauticians_path, class: "btn btn-my-beauty" %>
+        <button type="submit" class="btn btn-my-beauty hvr-float-shadow">Search</button>
+        <%= link_to "View all Beauticians", beauticians_path, class: "btn btn-my-beauty hvr-float-shadow" %>
       </form>
     </div>
   </div>
