--- a/app/views/beautician_treatments/index.html.erb
+++ b/app/views/beautician_treatments/index.html.erb
@@ -3,7 +3,7 @@
   <h3 class="text-center">Your Beautician Treatments</h3>
   </div>
   <div class="text-center">
-    <%= link_to "Add New Treatment",  new_beautician_beautician_treatment_path(current_user.beauticians.first), class: "btn btn-my-beauty"%>
+    <%= link_to "Add New Treatment",  new_beautician_beautician_treatment_path(current_user.beauticians.first), class: "btn btn-my-beauty hvr-float-shadow"%>
   </div>
   <div class="cards">
     <% @beautician_treatments.each do |treatment| %>
@@ -15,7 +15,7 @@
         </div>
         <div class="card-footer text-center bg-white">
           <p class="card-text price-bold">£<%= treatment.cost %></p>
-          <%= link_to "Edit Treatment",  edit_beautician_treatment_path(treatment), class: "btn btn-my-beauty"%>
+          <%= link_to "Edit Treatment",  edit_beautician_treatment_path(treatment), class: "btn btn-my-beauty hvr-float-shadow"%>
         </div>
       </div>
     </div>
