--- a/app/views/beauticians/_card.html.erb
+++ b/app/views/beauticians/_card.html.erb
@@ -20,7 +20,7 @@
 
         </div>
         <div class="card-footer text-center bg-white">
-          <%= link_to "View Profile", beautician_path(beautician), class: "btn btn-my-beauty" %>
+          <%= link_to "View Profile", beautician_path(beautician), class: "btn btn-my-beauty hvr-float-shadow" %>
         </div>
       </div>
     </div>
