--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
             </div>
 
             <div class="form-actions">
-              <%= f.button :submit, "Sign up", class: "btn btn-my-beauty" %>
+              <%= f.button :submit, "Sign up", class: "btn btn-my-beauty hvr-float-shadow" %>
             </div>
           <% end %>
 
