--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -6,7 +6,7 @@
         <%= f.input :title %>
         <%= f.input :content %>
         <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
-        <%= f.submit "Submit review", class: "btn btn-my-beauty" %>
+        <%= f.submit "Submit review", class: "btn btn-my-beauty hvr-float-shadow" %>
         <% end %>
       </div>
     </div>
