--- a/app/assets/stylesheets/pages/_account.scss
+++ b/app/assets/stylesheets/pages/_account.scss
@@ -1,6 +1,6 @@
 .bg-img {
   background-image: asset-data-url("bg-account.jpeg");
-  height: 100%;
+  height: 120vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
