--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@ body, html {
 
 .bg {
   background-image: asset-data-url("bg_home.jpg");
-  height: 100%;
+  height: 90vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
