--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,9 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
 
-
-    <%= yield %>
+    <div class="min-height">
+      <%= yield %>
+    </div>
     <%= render 'shared/footer' %>
   </body>
 </html>
