landing page picture slide

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,7 +59,7 @@
 </div>
 
 <div class="row treatments-card">
-  <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'nails.jpg' %>)"></div>
+  <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'nails.jpg' %>)" data-aos="zoom-in-right"></div>
   <div class="col-md-6 card-description my-auto">
     <p>Whether you're after a gel manicure that will last the distance or colourful and quirky designs – chose from our large list of professionals for all your nail needs.</p>
   </div>
@@ -69,11 +69,11 @@
   <div class="col-md-6 card-description my-auto">
     <p style="margin-left: 12px">Take care of your hair. You can make follicles happy with a hair growth serum or thinning hair treatment filled with nourishing oils that hydrate and protect.</p>
   </div>
-  <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'hair.jpg' %>)"></div>
+  <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'hair.jpg' %>)" data-aos="zoom-in-left"></div>
 </div>
 
 <div class="row treatments-card">
-  <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'face.jpg' %>)"></div>
+  <div class="col-md-6 card-img" style="background-image: url(<%= asset_path 'face.jpg' %>)" data-aos="zoom-in-right"></div>
   <div class="col-md-6 card-description my-auto">
     <p>Whether you want instant radiance or a complete skin overhaul, here are the best facial treatments that employ both pioneering technology and a healing touch.</p>
   </div>
@@ -96,3 +96,4 @@
     </div>
   </div>
 </div>
+
