--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -72,4 +72,8 @@
   }
 }
 
-
+.treatment_background {
+  background-image: linear-gradient(rgba(255,255,255,0.8),rgba(255,255,255,0.4)), url('https://images.unsplash.com/photo-1543098294-3a4679ff0c60?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+  background-size: cover;
+  background-position: center;
+}
